desktop styles done

--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
       <div class="contentbox">
 
         <div class="gb-left-tag">
-          <p>185 GB Left</p>
+          <p><span>185</span> GB Left</p>
         </div>
 
         <div class="status">
-          <p>You’ve used 815 GB of your storage</p>
-          <div class="statusbar"></div>
+          <p>You’ve used <strong>815 GB</strong> of your storage</p>
+          <div class="statusbar">
+            <div class="progress-bar">
+              <div class="dot"></div>
+            </div>
+          </div>
           <div class="space-text">
             <p>0 GB</p>
             <p>1000 GB</p>
